# ledger-drip

./: README.md  pyproject.toml
src/drip/: __init__.py  cli.py
tests/: test_cli.py
